--- a/etc/e11-cli/lambda-leaderboard/pyproject.toml
+++ b/etc/e11-cli/lambda-leaderboard/pyproject.toml
@@ -19,6 +19,9 @@ boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager
 flask = "^3.1.2"
 apig-wsgi = "^2.20.0"
 paramiko = "^4.0.0"
+pylint = "^4.0.4"
+pytest = "^9.0.2"
+pytest-cov = "^7.0.0"
 
 [tool.poetry.group.dev.dependencies]
 boto3-stubs = {extras = ["route53"], version = "^1.41.5"}
@@ -29,11 +32,9 @@ mypy-boto3-secretsmanager = "^1.40.60"
 mypy-boto3-ses = "^1.40.60"
 pydantic = "^2.12.4"
 pyright = "^1.1.407"
-pytest-cov = ">=6.2.1,<7.0.0"
-types-requests = "^2.32.4.20250913"
-ruff = "*"
-pylint-pytest = "^1.1.8"
 requests = "^2.32.5"
+ruff = "*"
+types-requests = "^2.32.4.20250913"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -102,3 +103,6 @@ pythonpath = [
  "tests",
  "src/leaderboard_app/e11.whl"]
 addopts = "-ra -q"
+markers = [
+    "docker: marks tests as requiring Docker environment"
+]
