--- a/.github/workflows/ci-e11.yml
+++ b/.github/workflows/ci-e11.yml
@@ -35,13 +35,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install pipx and Poetry
+      - name: Install pipx, Poetry, and Java
         run: |
           sudo apt -y update
-          sudo apt -y install python3-venv pipx
+          sudo apt -y install python3-venv pipx openjdk-17-jre-headless
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           pipx install poetry
           poetry --version
+          java -version
 
       - name: e11 command tests with coverage
         run: |
@@ -53,7 +54,13 @@ jobs:
         run: |
           (cd lambda-home; make install)
           (cd lambda-home; make lint)
-          (cd lambda-home; make test)
+          (cd lambda-home; make check)
+
+      - name: lambda-leaderboard tests with coverage require Python 3.13
+        if: matrix.python-version == '3.13'
+        run: |
+          (cd lambda-leaderboard; make install)
+          (cd lambda-leaderboard; make check)
 
       - name: list coverage files
         run: |
@@ -63,7 +70,7 @@ jobs:
         if: matrix.python-version == '3.13'
         uses: codecov/codecov-action@v5
         with:
-          files: coverage.xml,lambda-home/coverage.xml
+          files: coverage.xml,lambda-home/coverage.xml,lambda-leaderboard/coverage.xml
           flags: unittests
           fail_ci_if_error: false
           token: ${{ secrets.CODECOV_TOKEN }}
