--- a/lab8/Makefile
+++ b/lab8/Makefile
@@ -1,5 +1,5 @@
 #
-# This is a Unix Makefile for Lab 2
+# This is a Unix Makefile for Lab 8
 # We use python to install djlint which is used to check the HTML files
 
 export LAB=lab8
@@ -13,8 +13,8 @@ $(PYTHON):
 	poetry install		# installs the current poetry.lock, do not update
 
 lint: $(PYTHON)
-	poetry run pylint esp32/
-	poetry run pyright esp32/
+	poetry run pylint server
+	poetry run pyright server
 
 distclean:
 	@echo already clean
