--- a/etc/e11-cli/lambda-home/pyproject.toml
+++ b/etc/e11-cli/lambda-home/pyproject.toml
@@ -20,7 +20,7 @@ itsdangerous = "^2.2.0"
 pyjwt = "^2.10.1"
 jinja2 = "^3.1.6"
 pydantic = "^2.12.4"
-boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager", "dynamodb"] }
+boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager", "dynamodb", "s3"] }
 crossplane = "^0.5.8"
 pyyaml = "^6.0.3"
 tabulate = "^0.9.0"
