--- a/etc/e11-cli/lambda-leaderboard/pyproject.toml
+++ b/etc/e11-cli/lambda-leaderboard/pyproject.toml
@@ -15,7 +15,7 @@ boto3 = "^1.40.71"
 itsdangerous = "^2.2.0"
 jinja2 = "^3.1.6"
 pydantic = "^2.12.4"
-boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager", "dynamodb"] }
+boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager", "dynamodb", "s3"] }
 flask = "^3.1.2"
 apig-wsgi = "^2.20.0"
 paramiko = "^4.0.0"
