--- a/etc/e11-cli/lambda-home/Makefile
+++ b/etc/e11-cli/lambda-home/Makefile
@@ -86,7 +86,9 @@ vend-e11: install
 prod-vbd: template.yaml samconfig-prod.toml src/requirements.txt vend-e11 lint
 	sam validate --config-file samconfig-prod.toml -t template.yaml --lint
 	sam build --parallel --use-container --config-file samconfig-prod.toml -t template.yaml
-	sam deploy --config-file "$$(pwd)/samconfig-prod.toml"  --parameter-overrides DeploymentTimestamp="$$(date +'%Y-%m-%dT%H:%M:%S%z %Z')" --no-confirm-changeset -t .aws-sam/build/template.yaml
+	sam deploy --config-file "$$(pwd)/samconfig-prod.toml"  \
+		--parameter-overrides DeploymentTimestamp="$$(date +'%Y-%m-%dT%H:%M:%S%z %Z')" \
+		--no-confirm-changeset -t .aws-sam/build/template.yaml
 	curl --silent  https://$(ROOT_DOMAIN)/ | head -3
 
 stage-vbd: template.yaml samconfig-stage.toml src/requirements.txt vend-e11
