--- a/etc/e11-cli/lambda-home/samconfig-prod.toml
+++ b/etc/e11-cli/lambda-home/samconfig-prod.toml
@@ -15,7 +15,7 @@ image_repositories = []
 
 # --- Parameters ---
 LogLevel = "DEBUG"
-parameter_overrides = "EnvironmentName=\"prod\" UsersTableName=\"e11-users\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" SshSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:ssh-keys-EqRSxl\" SqsSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:sqs-auth-secret-CkrRul\" LogLevel=\"INFO\""
+parameter_overrides = "EnvironmentName=\"prod\" UsersTableName=\"e11-users\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" SshSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:ssh-keys-EqRSxl\" SqsSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:sqs-auth-secret-CkrRul\" LogLevel=\"DEBUG\""
 
 [default.global.parameters]
 region = "us-east-1"
