--- a/lab8/pyproject.toml
+++ b/lab8/pyproject.toml
@@ -1,13 +1,15 @@
 [project]
 name = "lab7"
 version = "1.0.0"
-description = "Lab 8 static web page checker"
+description = "Lab 8 Tools"
 authors = [
     {name = "Simson Garfinkel",email = "simsong@acm.org"}
 ]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "circuitpython-stubs (>=10.0.3,<11.0.0)",
+    "adafruit-circuitpython-neopixel (>=6.3.18,<7.0.0)"
 ]
 
 [tool.poetry]
