--- a/lab8/Makefile
+++ b/lab8/Makefile
@@ -2,9 +2,6 @@
 # This is a Unix Makefile for Lab 8
 # We use python to install djlint which is used to check the HTML files
 
-export LAB=lab8
-export PORT=8008
-
 PYTHON=.venv/bin/python3
 install: $(PYTHON)
 
@@ -12,12 +9,22 @@ $(PYTHON):
 	poetry config virtualenvs.in-project true
 	poetry install		# installs the current poetry.lock, do not update
 
+pub1:
+	cp camera1.py /Volumes/CIRCUITPY/code.py
+
+pub2:
+	cp camera2.py /Volumes/CIRCUITPY/code.py
+
+
+
+memento-install: $(PYTHON) requirements_cp.txt
+	poetry run circup install -r requirements_cp.txt
+
 lint: $(PYTHON)
-	poetry run pylint server
-	poetry run pyright server
+	poetry run pylint *.py
+	poetry run pyright *.py
 
 distclean:
-	@echo already clean
+	/bin/rm -rf .venv
 
-
-.PHONY: distclean lint
+.PHONY: distclean lint memento-install
