--- a/lab8/pyproject.toml
+++ b/lab8/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "circuitpython-stubs (>=10.0.3,<11.0.0)",
-    "adafruit-circuitpython-neopixel (>=6.3.18,<7.0.0)"
+    "adafruit-circuitpython-neopixel (>=6.3.18,<7.0.0)",
+    "requests (>=2.32.5,<3.0.0)"
 ]
 
 [tool.poetry]
