--- a/etc/e11-cli/lambda-home/samconfig-stage.toml
+++ b/etc/e11-cli/lambda-home/samconfig-stage.toml
@@ -32,7 +32,7 @@ SqsSecretId = "arn:aws:secretsmanager:us-east-1:586794483136:secret:sqs-auth-sec
 HostedZoneId = "Z05034072HOMXYCK23BRA"
 CertificateArn = ""
 LogLevel = "DEBUG"
-parameter_overrides = "EnvironmentName=\"stage\" UsersTableName=\"e11-users\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" SshSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:ssh-keys-EqRSxl\" SqsSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:sqs-auth-secret-CkrRul\" LogLevel=\"INFO\""
+parameter_overrides = "EnvironmentName=\"stage\" UsersTableName=\"e11-users\" LeaderboardTableName=\"Leaderboard\" HostedZoneId=\"Z05034072HOMXYCK23BRA\" CertificateArn=\"\" OidcSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:harvardkey-oidc-JGPzjb\" SshSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:ssh-keys-EqRSxl\" SqsSecretId=\"arn:aws:secretsmanager:us-east-1:586794483136:secret:sqs-auth-secret-CkrRul\" LogLevel=\"INFO\""
 
 [default.global.parameters]
 region = "us-east-1"
