--- a/lab7/pyproject.toml
+++ b/lab7/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
              "pylint",
              "adafruit-blinka",
              "requests (>=2.32.5,<3.0.0)",
-             "circuitpython-stubs (>=10.0.3,<11.0.0)"
+             "circuitpython-stubs (>=10.0.3,<11.0.0)",
+             "tabulate (>=0.9.0,<0.10.0)"
 ]
 
 [tool.poetry]
