--- a/lab7_linux/pyproject.toml
+++ b/lab7_linux/pyproject.toml
@@ -1,25 +1,21 @@
 [project]
-name = "lab6"
+name = "lab7"
 version = "1.0.0"
-description = "Lab 7 Circuit Python and ESP32 tools"
+description = "Lab 7 Code for Linux Client"
 authors = [
     {name = "Simson Garfinkel",email = "simsong@acm.org"}
 ]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-             "circup",
-             "adafruit-ampy",
-             "pylint",
-             "adafruit-blinka",
-             "circuitpython-stubs (>=10.0.3,<11.0.0)"
+             "requests (>=2.32.5,<3.0.0)",
+             "tabulate (>=0.9.0,<0.10.0)"
 ]
 
 [tool.poetry]
 package-mode = false
 
 [tool.pylint.basic]
-good-names = ["VELOCITY_X", "VELOCITY_Y"]
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.8"
@@ -27,16 +23,6 @@ pyright = "^1.1.407"
 circuitpython-stubs = "^10.0.3"
 
 [tool.pylint.main]
-ignored-modules = [
-    "adafruit_display_shapes",
-    "board",
-    "digitalio",
-    "displayio",
-    "microcontroller",
-    "busio",
-    "wifi"
-]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
