--- a/lab6/Makefile
+++ b/lab6/Makefile
@@ -15,6 +15,7 @@ PYTHON=.venv/bin/python6
 $(PYTHON):
 	poetry config virtualenvs.in-project true
 	poetry install
+	npm install
 
 #
 # Install the lab4.services file
