--- a/lab8_memento/pyproject.toml
+++ b/lab8_memento/pyproject.toml
@@ -22,6 +22,7 @@ djlint = "^1.36.4"
 pyright = "^1.1.407"
 circuitpython-stubs = "^10.0.3"
 adafruit-circuitpython-pycamera = "^1.5.3"
+pylint = "^4.0.4"
 
 [tool.pylint.main]
 ignored-modules = [
