e11admin command made a CLI in e11 project. Implemented --ssh command

--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -47,6 +47,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 e11 = "e11.__main__:main"
+e11admin = "e11.e11admin.cli:main"
 
 [tool.pylint.main]
 # Specify the Python version Pylint should assume for syntax checking.
