--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -20,6 +20,7 @@ pydantic = "*"
 crossplane = "^0.5.8"
 tabulate = "^0.9.0"
 pyyaml = "^6.0.3"
+asyncssh = "^2.22.0"
 
 
 [tool.poetry.group.dev.dependencies]
