--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -5,9 +5,10 @@ description = "CSCI E-11 command for managing submissions to grader and AWS infr
 authors = ["Simson Garfinkel <simsong@acm.org>"]
 license = "GPL"
 readme = "README.md"
+packages = [{ include = "e11" }]
 
 [tool.poetry.dependencies]
-python = ">=3.12"
+python = ">=3.12,<3.14.0"
 boto3 = ">=1.39.14,<2.0.0"
 requests = ">=2.32.4,<3.0.0"
 dnspython = ">=2.7.0,<3.0.0"
