--- a/lab6/lab6.service
+++ b/lab6/lab6.service
@@ -12,5 +12,6 @@ ExecStart=/home/ubuntu/spring26/lab6/.venv/bin/gunicorn -w 2 -b 127.0.0.1:8006 -
 Restart=always
 RestartSec=1
 
-[Install]
-WantedBy=multi-user.target
+# Commented out so that the service is not enabled by default
+# [Install]
+# WantedBy=multi-user.target
