DynamoDBlocal runs on TCP port 8000 by default

--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -67,6 +67,7 @@ disable = [
     "missing-function-docstring",
     "line-too-long",
     "unspecified-encoding",
+    "trailing-whitespace",
     "too-many-locals"
 ]
 
