--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = [
     {name = "Simson Garfinkel",email = "simsong@acm.org"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<3.14.0"
 dependencies = [
+    "e11 @ file:./etc/e11-cli",
 ]
 
 [tool.poetry.group.dev.dependencies]
